--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     },
     "scripts": {
         "dev": "yarn workspace web dev",
-        "build": "yarn workspaces foreach -Rv --from web run build",
-        "tsc": "yarn workspaces foreach -Rv --from web run tsc",
-        "lint": "yarn workspaces foreach -Rv --from web run lint",
-        "test": "yarn workspaces foreach -Rv --from web run test",
-        "build:web": "yarn workspace web build",
+        "// build global de l'app (exécute d'abord les deps si nécessaires)": ":",
+        "build": "yarn workspaces foreach -Rvt run build",
+        "// Type-check partout (sans émettre)": ":",
+        "tsc": "yarn workspaces foreach -Rvt run tsc",
+        "tsc:packages": "yarn workspaces foreach -Rvt --from \"@packages/*\" run tsc",
         "tsc:web": "yarn workspace web run tsc",
-        "tsc:packages": "yarn workspaces foreach -R --from \"@packages/*\" run tsc",
+        "// Lint partout": ":",
+        "lint": "yarn workspaces foreach -Rvt run lint",
         "lint:web": "yarn workspace web run lint",
-        "test:web": "yarn workspace web run test"
+        "// Tests partout (placeholders dans les packages)": ":",
+        "test": "yarn workspaces foreach -Rvt run test",
+        "test:web": "yarn workspace web run test",
+        "// Pipeline complète (CI locale)": ":",
+        "check": "yarn tsc && yarn lint && yarn test",
+        "// Nettoyage multi-workspaces (safe)": ":",
+        "clean": "yarn workspaces foreach -Rvt run clean || echo \"no clean script\""
     },
     "devDependencies": {
         "eslint": "^9.15.0",
