--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -12,5 +12,8 @@
         "tsc": "tsc --noEmit",
         "lint": "echo \"(placeholder)\"",
         "test": "echo \"(placeholder)\""
+    },
+    "dependencies": {
+        "@packages/types": "workspace:*"
     }
 }
