--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -7,5 +7,6 @@
         "declaration": true,
         "tsBuildInfoFile": "./dist/.tsbuildinfo"
     },
-    "include": ["src"]
+    "include": ["src"],
+    "references": [{ "path": "../types" }]
 }
