--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -16,6 +16,6 @@
     "dependencies": {
         "@packages/domain": "workspace:*",
         "@packages/types": "workspace:*",
-        "aws-amplify": "6.9.0"
+        "aws-amplify": "^6.14.4"
     }
 }
