--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,10 @@
         "@formspree/react": "^2.5.1",
         "@mui/icons-material": "^7.1.0",
         "@mui/material": "^7.1.0",
+        "@packages/domain": "workspace:*",
+        "@packages/services": "workspace:*",
+        "@packages/types": "workspace:*",
+        "@packages/ui": "workspace:*",
         "aws-amplify": "^6.14.4",
         "clsx": "^2.1.1",
         "file-saver": "^2.0.5",
@@ -33,8 +37,8 @@
         "react-hook-form": "7.51.5",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
-        "react-modal-component-by-jeremy": "^1.2.7",
         "rehype-sanitize": "^6.0.0",
+        "react-modal-component-by-jeremy": "^1.2.7",
         "remark-gfm": "^4.0.1",
         "sass": "1.60.0",
         "sharp": "^0.34.1",
