--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,32 +1,50 @@
 {
-    "compilerOptions": {
-        "noEmit": true,
-        "jsx": "preserve",
-        "incremental": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "baseUrl": "../..",
-        "paths": {
-            "@packages/ui/*": ["packages/ui/src/*"],
-            "@packages/domain/*": ["packages/domain/src/*"],
-            "@packages/services/*": ["packages/services/src/*"],
-            "@packages/types/*": ["packages/types/src/*"]
-        },
-        "allowJs": true,
-        "plugins": [
-            {
-                "name": "next"
-            }
-        ]
-    },
-    "include": [
-        "next-env.d.ts",
-        "app/**/*.{ts,tsx,js,jsx}",
-        "src/**/*.{ts,tsx,js,jsx}",
-        ".next/types/**/*.ts"
+  "compilerOptions": {
+    "noEmit": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
-    "exclude": ["node_modules"]
+    "baseUrl": "../..",
+    "paths": {
+      "@packages/ui/*": [
+        "packages/ui/src/*"
+      ],
+      "@packages/domain/*": [
+        "packages/domain/src/*"
+      ],
+      "@packages/services/*": [
+        "packages/services/src/*"
+      ],
+      "@packages/types/*": [
+        "packages/types/src/*"
+      ]
+    },
+    "allowJs": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "target": "ES2017",
+    "strict": false,
+    "module": "esnext",
+    "moduleResolution": "node"
+  },
+  "include": [
+    "next-env.d.ts",
+    "app/**/*.{ts,tsx,js,jsx}",
+    "src/**/*.{ts,tsx,js,jsx}",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
