--- a/package.json
+++ b/package.json
@@ -11,21 +11,15 @@
     },
     "scripts": {
         "dev": "yarn workspace web dev",
-        "// build global de l'app (exécute d'abord les deps si nécessaires)": ":",
-        "build": "yarn workspaces foreach -Rvt run build",
-        "// Type-check partout (sans émettre)": ":",
-        "tsc": "yarn workspaces foreach -Rvt run tsc",
-        "tsc:packages": "yarn workspaces foreach -Rvt --from \"@packages/*\" run tsc",
+        "build": "tsc -b packages/tsconfig.json",
+        "tsc": "tsc -b packages/tsconfig.json",
+        "tsc:packages": "tsc -b packages/tsconfig.json",
         "tsc:web": "yarn workspace web run tsc",
-        "// Lint partout": ":",
         "lint": "yarn workspaces foreach -Rvt run lint",
         "lint:web": "yarn workspace web run lint",
-        "// Tests partout (placeholders dans les packages)": ":",
         "test": "yarn workspaces foreach -Rvt run test",
         "test:web": "yarn workspace web run test",
-        "// Pipeline complète (CI locale)": ":",
         "check": "yarn tsc && yarn lint && yarn test",
-        "// Nettoyage multi-workspaces (safe)": ":",
         "clean": "yarn workspaces foreach -Rvt run clean || echo \"no clean script\""
     },
     "devDependencies": {
