--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,50 +1,47 @@
 {
-  "compilerOptions": {
-    "noEmit": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "baseUrl": "../..",
-    "paths": {
-      "@packages/ui/*": [
-        "packages/ui/src/*"
-      ],
-      "@packages/domain/*": [
-        "packages/domain/src/*"
-      ],
-      "@packages/services/*": [
-        "packages/services/src/*"
-      ],
-      "@packages/types/*": [
-        "packages/types/src/*"
-      ]
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "strict": true,
+        "noEmit": true,
+        "jsx": "preserve",
+        "incremental": true,
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "baseUrl": "../..",
+        "paths": {
+            "@apps/*": ["apps/web/*"],
+            "@app/*": ["apps/web/app/*"],
+            "@src/*": ["apps/web/src/*"],
+            "@packages/ui/*": ["packages/ui/src/*"],
+            "@packages/domain/*": ["packages/domain/src/*"],
+            "@packages/services/*": ["packages/services/src/*"],
+            "@packages/types/*": ["packages/types/src/*"]
+        },
+        "plugins": [{ "name": "next" }]
     },
-    "allowJs": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
+    "include": [
+        "next-env.d.ts",
+        "app/**/*.ts",
+        "app/**/*.tsx",
+        "app/**/*.js",
+        "app/**/*.jsx",
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "src/**/*.js",
+        "src/**/*.jsx",
+        "public/**/*.json",
+        ".next/types/**/*.ts",
+        "../../packages/types/src/amplify-global.d.ts"
     ],
-    "target": "ES2017",
-    "strict": false,
-    "module": "esnext",
-    "moduleResolution": "node"
-  },
-  "include": [
-    "next-env.d.ts",
-    "app/**/*.{ts,tsx,js,jsx}",
-    "src/**/*.{ts,tsx,js,jsx}",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "exclude": ["node_modules"],
+    "references": [
+        { "path": "../../packages/types" },
+        { "path": "../../packages/domain" },
+        { "path": "../../packages/services" },
+        { "path": "../../packages/ui" }
+    ]
 }
