--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
         "tsc": "yarn tsc:packages && yarn tsc:web",
         "tsc:packages": "tsc -b packages/tsconfig.json",
         "tsc:web": "yarn workspace web run tsc",
-        "lint": "yarn lint:packages && yarn lint:web",
+        "lint": "yarn workspace @packages/domain run lint",
         "lint:packages": "eslint \"packages/**/*.{ts,tsx,js,jsx}\"",
-        "lint:web": "eslint \"apps/web/**/*.{ts,tsx,js,jsx}\"",
+        "lint:web": "yarn workspace web run lint",
         "test": "yarn workspaces foreach -Rvt run test",
         "test:web": "yarn workspace web run test",
         "check": "yarn tsc && yarn lint && yarn test",
-        "clean": "yarn workspaces foreach -Rvt run clean || echo \"no clean script\""
+        "clean": "yarn workspaces foreach -Rvt run clean || echo \"no clean script\" && rm -rf packages/*/dist"
     },
     "devDependencies": {
-        "eslint": "^9.15.0",
         "@eslint/js": "^9.15.0",
-        "@typescript-eslint/parser": "^8.32.1",
         "@typescript-eslint/eslint-plugin": "^8.32.1",
+        "@typescript-eslint/parser": "^8.32.1",
+        "eslint": "^9.15.0",
         "typescript": "5.4.4"
     },
     "resolutions": {
