--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -8,5 +8,6 @@
         "jsx": "react-jsx",
         "tsBuildInfoFile": "./dist/.tsbuildinfo"
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
 }
