--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,12 +10,11 @@
     "scripts": {
         "build": "tsc --build",
         "tsc": "tsc --noEmit",
-        "lint": "eslint . --max-warnings 0",
+        "lint": "eslint \"src/**/*.{ts,tsx}\"",
         "test": "echo \"(placeholder)\""
     },
     "peerDependencies": {
         "@types/react": ">=18",
-        "next": "^15.3.1",
         "react": ">=18",
         "react-dom": ">=18"
     },
@@ -23,14 +22,6 @@
         "@types/react": {
             "optional": true
         }
-    },
-    "devDependencies": {
-        "@packages/eslint-config": "*",
-        "@types/node": "^22.15.3",
-        "@types/react": "19.1.0",
-        "@types/react-dom": "19.1.1",
-        "eslint": "^9.34.0",
-        "typescript": "5.9.2"
     },
     "dependencies": {
         "@packages/types": "workspace:*",
