chore: migration vers eslint config

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
         "tsc": "yarn tsc:packages && yarn tsc:web",
         "tsc:packages": "tsc -b packages/tsconfig.json",
         "tsc:web": "yarn workspace web run tsc",
-        "lint": "yarn workspace @packages/domain run lint",
+        "lint": "eslint packages/domain packages/services packages/types packages/ui apps/web",
         "lint:packages": "eslint \"packages/**/*.{ts,tsx,js,jsx}\"",
-        "lint:web": "yarn workspace web run lint",
+        "lint:web": "eslint apps/web",
         "test": "yarn workspaces foreach -Rvt run test",
         "test:web": "yarn workspace web run test",
         "check": "yarn tsc && yarn lint && yarn test",
