--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "tsc": "yarn tsc:packages && yarn tsc:web",
         "tsc:packages": "tsc -b packages/tsconfig.json",
         "tsc:web": "yarn workspace web run tsc",
-        "lint": "eslint -f unix --max-warnings=0 packages/domain packages/services packages/types packages/ui apps/web",
+        "lint": "eslint -f codeframe --max-warnings=0 --no-error-on-unmatched-pattern packages/domain packages/services packages/types packages/ui apps/web",
+        "lint:pretty": "yarn -s lint | % { $_ -replace [regex]::Escape(\"$PWD\\\"), \".\\\" -replace '/', '\\\\' }",
         "lint:packages": "eslint \"packages/**/*.{ts,tsx,js,jsx}\"",
         "lint:web": "eslint apps/web",
         "test": "yarn workspaces foreach -Rvt run test",
@@ -29,6 +30,9 @@
         "@typescript-eslint/eslint-plugin": "^8.42.0",
         "@typescript-eslint/parser": "^8.42.0",
         "eslint": "^9.35.0",
+        "eslint-formatter-codeframe": "^7.32.1",
+        "eslint-formatter-compact": "^8.40.0",
+        "eslint-formatter-unix": "^8.40.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-unused-imports": "^4.2.0",
