--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "root",
     "private": true,
     "workspaces": [
         "apps/*",
@@ -25,19 +26,24 @@
         "clean": "yarn workspaces foreach -Rvt run clean || echo \"no clean script\" && rm -rf packages/*/dist"
     },
     "devDependencies": {
-        "@eslint/js": "^9.35.0",
-        "@next/eslint-plugin-next": "^15.0.0",
+        "@eslint/js": "9.35.0",
+        "@next/eslint-plugin-next": "15.3.1",
         "@typescript-eslint/eslint-plugin": "^8.42.0",
         "@typescript-eslint/parser": "^8.42.0",
-        "eslint": "^9.35.0",
+        "eslint": "9.35.0",
+        "eslint-config-prettier": "10.1.1",
         "eslint-formatter-codeframe": "^7.32.1",
         "eslint-formatter-compact": "^8.40.0",
         "eslint-formatter-unix": "^8.40.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-only-warn": "^1.1.0",
+        "eslint-plugin-react": "7.37.5",
+        "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-unused-imports": "^4.2.0",
+        "globals": "16.3.0",
         "typescript": "5.4.4",
-        "typescript-eslint": "^8.42.0"
+        "typescript-eslint": "8.42.0"
     },
     "resolutions": {
         "react-hook-form": "7.51.5"
