--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,16 +8,15 @@
         "./next-js": "./next.js",
         "./react-internal": "./react-internal.js"
     },
-    "devDependencies": {
-        "@eslint/js": "^9.34.0",
-        "@next/eslint-plugin-next": "^15.5.0",
-        "eslint": "^9.34.0",
-        "eslint-config-prettier": "^10.1.1",
-        "eslint-plugin-only-warn": "^1.1.0",
-        "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "globals": "^16.3.0",
-        "typescript": "^5.9.2",
-        "typescript-eslint": "^8.40.0"
+    "peerDependencies": {
+        "@eslint/js": ">=9.34.0 <10",
+        "@next/eslint-plugin-next": ">=15.0.0 <16",
+        "eslint": ">=9.34.0 <10",
+        "eslint-config-prettier": ">=10 <11",
+        "eslint-plugin-react": ">=7 <8",
+        "eslint-plugin-react-hooks": ">=5 <6",
+        "globals": ">=16 <17",
+        "typescript": ">=5.4.4 <6",
+        "typescript-eslint": ">=8.40.0 <9"
     }
 }
