--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,27 +6,19 @@
         "composite": true,
         "declaration": true,
         "jsx": "react-jsx",
-        "tsBuildInfoFile": "./dist/.tsbuildinfo"
-    },
-    "baseUrl": "../..",
-    "paths": {
-        "@apps/*": ["apps/web/*"],
-        "@app/*": ["apps/web/app/*"],
-        "@src/*": ["apps/web/src/*"],
-        "@packages/ui/*": ["packages/ui/src/*"],
-        "@packages/domain/*": ["packages/domain/src/*"],
-        "@packages/services/*": ["packages/services/src/*"],
-        "@packages/types/*": ["packages/types/src/*"],
-        "@assets/*": ["apps/web/src/assets/*"],
-        "@components/*": ["apps/web/src/components/*"],
-        "@hooks/*": ["apps/web/src/hooks/*"],
-        "@context/*": ["apps/web/src/context/*"],
-        "@utils/*": ["apps/web/src/utils/*"],
-        "@public/*": ["apps/web/public/*"]
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "tsBuildInfoFile": "./dist/.tsbuildinfo",
+        "baseUrl": ".", // pas de paths cross-packages ici
+        "paths": {
+            "@packages/ui/*": ["src/*"] // local uniquement (optionnel)
+        },
+        "skipLibCheck": true
     },
     "include": ["src"],
     "peerDependencies": {
         "aws-amplify": ">=6",
         "@aws-amplify/ui-react": ">=6"
-    }
+    },
+    "references": [{ "path": "../types" }, { "path": "../services" }]
 }
