--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
         }
     },
     "dependencies": {
+        "@packages/services": "workspace:*",
         "@packages/types": "workspace:*",
         "react-markdown": "10.1.0",
         "remark-gfm": "^4.0.0"
