--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -5,7 +5,8 @@
         "outDir": "dist",
         "composite": true,
         "declaration": true,
-        "emitDeclarationOnly": false,
+        "emitDeclarationOnly": true,
+        "allowImportingTsExtensions": true,
         "jsx": "react-jsx",
         "moduleResolution": "NodeNext",
         "module": "NodeNext",
