fix(tsconfig): corrige l'alias d'accès à Amplify

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,7 +13,8 @@
             "@app/*": ["apps/web/app/*"],
             "@src/*": ["apps/web/src/*"],
             "@packages/ui": ["packages/ui/src"],
-            "@amplify": ["amplify/*"],
+            "@amplify": ["amplify"],
+            "@amplify/*": ["amplify/*"],
             "@packages/ui/*": ["packages/ui/src/*"],
             "@packages/services": ["packages/services/src"],
             "@packages/services/*": ["packages/services/src/*"],
