--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,7 +16,8 @@
             "@apps/*": ["apps/web/*"],
             "@app/*": ["apps/web/app/*"],
             "@src/*": ["apps/web/src/*"],
-            "@amplify": ["amplify/*"],
+            "@amplify": ["amplify"],
+            "@amplify/*": ["amplify/*"],
             "@packages/ui/*": ["packages/ui/src/*"],
             "@packages/domain/*": ["packages/domain/src/*"],
             "@packages/services/*": ["packages/services/src/*"],
