fix: align ts aliases

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,14 +13,19 @@
         "lib": ["dom", "dom.iterable", "esnext"],
         "baseUrl": "../..",
         "paths": {
+            "@/*": ["./*"],
             "@apps/*": ["apps/web/*"],
             "@app/*": ["apps/web/app/*"],
             "@src/*": ["apps/web/src/*"],
             "@amplify": ["amplify"],
             "@amplify/*": ["amplify/*"],
+            "@packages/ui": ["packages/ui/src"],
             "@packages/ui/*": ["packages/ui/src/*"],
+            "@packages/domain": ["packages/domain/src"],
             "@packages/domain/*": ["packages/domain/src/*"],
+            "@packages/services": ["packages/services/src"],
             "@packages/services/*": ["packages/services/src/*"],
+            "@packages/types": ["packages/types/src"],
             "@packages/types/*": ["packages/types/src/*"],
             "@assets/*": ["apps/web/src/assets/*"],
             "@components/*": ["apps/web/src/components/*"],
