--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -5,8 +5,8 @@
         "outDir": "dist",
         "composite": true,
         "declaration": true,
-        "emitDeclarationOnly": true,
-        "allowImportingTsExtensions": true,
+        // "emitDeclarationOnly": true,
+            // "allowImportingTsExtensions": true,
         "jsx": "react-jsx",
         "moduleResolution": "NodeNext",
         "module": "NodeNext",
