--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,10 +14,10 @@
         "test": "echo \"(placeholder)\""
     },
     "peerDependencies": {
-        "react": ">=18",
-        "react-dom": ">=18",
+        "@aws-amplify/ui-react": ">=6",
         "next": ">=15",
-        "@aws-amplify/ui-react": ">=6"
+        "react": ">=18",
+        "react-dom": ">=18"
     },
     "peerDependenciesMeta": {
         "@types/react": {
