--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,21 +6,16 @@
         "composite": true,
         "declaration": true,
         "jsx": "react-jsx",
-        "emitDeclarationOnly": true,
         "allowImportingTsExtensions": true,
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "tsBuildInfoFile": "./dist/.tsbuildinfo",
-        "baseUrl": ".", // pas de paths cross-packages ici
+        "skipLibCheck": true,
+        "baseUrl": ".",
         "paths": {
-            "@packages/ui/*": ["src/*"] // local uniquement (optionnel)
-        },
-        "skipLibCheck": true
+            "@packages/ui/*": ["src/*"]
+        }
     },
     "include": ["src"],
-    "peerDependencies": {
-        "aws-amplify": ">=6",
-        "@aws-amplify/ui-react": ">=6"
-    },
     "references": [{ "path": "../types" }, { "path": "../services" }]
 }
