--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -10,9 +10,26 @@
             "types": "./dist/index.d.ts",
             "default": "./dist/index.js"
         },
+        "./amplify": {
+            "types": "./dist/amplify/index.d.ts",
+            "default": "./dist/amplify/index.js"
+        },
         "./amplify/*": {
             "types": "./dist/amplify/*.d.ts",
             "default": "./dist/amplify/*.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "amplify": [
+                "src/amplify/index.ts"
+            ],
+            "amplify/*": [
+                "src/amplify/*"
+            ],
+            "*": [
+                "src/*"
+            ]
         }
     },
     "scripts": {
