--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,31 +2,43 @@
     "compilerOptions": {
         "target": "ES2019",
         "module": "ESNext",
-        "moduleResolution": "NodeNext",
+        "moduleResolution": "Node",
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "strict": true,
         "baseUrl": ".",
         "paths": {
+            "@/*": ["./*"],
             "@apps/*": ["apps/web/*"],
             "@app/*": ["apps/web/app/*"],
             "@src/*": ["apps/web/src/*"],
-
+            "@packages/ui": ["packages/ui/src"],
+            "@amplify": ["amplify"],
+            "@amplify/*": ["amplify/*"],
+            "@packages/ui/*": ["packages/ui/src/*"],
             "@packages/services": ["packages/services/src"],
             "@packages/services/*": ["packages/services/src/*"],
             "@packages/types": ["packages/types/src"],
             "@packages/types/*": ["packages/types/src/*"],
             "@packages/domain": ["packages/domain/src"],
-            "@packages/domain/*": ["packages/domain/src/*"],
-            "@packages/ui": ["packages/ui/src"],
-            "@packages/ui/*": ["packages/ui/src/*"],
-
-            "@assets/*": ["apps/web/src/assets/*"],
-            "@components/*": ["apps/web/src/components/*"],
-            "@hooks/*": ["apps/web/src/hooks/*"],
-            "@context/*": ["apps/web/src/context/*"],
-            "@utils/*": ["apps/web/src/utils/*"],
-            "@public/*": ["apps/web/public/*"]
+            "@packages/domain/*": ["packages/domain/src/*"]
         }
-    }
+    },
+    "references": [
+        {
+            "path": "packages/types"
+        },
+        {
+            "path": "packages/domain"
+        },
+        {
+            "path": "packages/services"
+        },
+        {
+            "path": "packages/ui"
+        },
+        {
+            "path": "apps/web"
+        }
+    ]
 }
