--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -26,6 +26,15 @@
         "@packages/types": "workspace:*"
     },
     "peerDependencies": {
-        "aws-amplify": ">=6"
+        "aws-amplify": ">=6",
+        "@aws-amplify/ui-react": ">=6",
+        "next": ">=15",
+        "react": ">=18",
+        "react-dom": ">=18"
+    },
+    "peerDependenciesMeta": {
+        "@types/react": {
+            "optional": true
+        }
     }
 }
