--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -5,12 +5,17 @@
         "outDir": "dist",
         "composite": true,
         "declaration": true,
+        "jsx": "react-jsx",
         "emitDeclarationOnly": true,
         "allowImportingTsExtensions": true,
-        "jsx": "react-jsx",
-        "moduleResolution": "NodeNext",
         "module": "NodeNext",
-        "tsBuildInfoFile": "./dist/.tsbuildinfo"
+        "moduleResolution": "NodeNext",
+        "tsBuildInfoFile": "./dist/.tsbuildinfo",
+        "skipLibCheck": true
     },
-    "include": ["src"]
+    "include": ["src"],
+    "peerDependencies": {
+        "aws-amplify": ">=6",
+        "@aws-amplify/ui-react": ">=6"
+    }
 }
