--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -7,7 +7,7 @@
         "declaration": true,
         "jsx": "react-jsx",
         "emitDeclarationOnly": true,
-        "allowImportingTsExtensions": true,
+        // "allowImportingTsExtensions": true,
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "tsBuildInfoFile": "./dist/.tsbuildinfo",
