refactor: unify imports/exports (no .ts/.tsx/.js/.jsx) across monorepo + stable barrels + exports/typesVersions

--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -5,7 +5,10 @@
         "outDir": "dist",
         "composite": true,
         "declaration": true,
-        "tsBuildInfoFile": "./dist/.tsbuildinfo"
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
+        "tsBuildInfoFile": "./dist/.tsbuildinfo",
+        "skipLibCheck": true
     },
     "include": ["src"],
     "references": [{ "path": "../types" }]
