--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,9 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "type": "module",
-    "main": "src/index.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "exports": {
-        ".": "./src/index.ts"
+        ".": {
+            "types": "./dist/index.d.ts",
+            "default": "./dist/index.js"
+        },
+        "./auth": {
+            "types": "./dist/auth/index.d.ts",
+            "default": "./dist/auth/index.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "auth": ["src/auth/index.ts"],
+            "*": ["src/*"]
+        }
     },
     "scripts": {
         "build": "tsc --build",
