--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -4,15 +4,21 @@
     "private": true,
     "type": "module",
     "main": "dist/index.js",
-    "types": "src/index.d.ts",
+    "types": "dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./src/index.d.ts",
+            "types": "./dist/index.d.ts",
             "default": "./dist/index.js"
         },
-        "./amplify/*": {
-            "types": "./src/amplify/*.d.ts",
-            "default": "./dist/amplify/*.js"
+        "./amplify": {
+            "types": "./dist/amplify/index.d.ts",
+            "default": "./dist/amplify/index.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "amplify": ["src/amplify/index.ts"],
+            "*": ["src/*"]
         }
     },
     "scripts": {
