--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -13,7 +13,9 @@
     },
     "typesVersions": {
         "*": {
-            "*": ["src/*"]
+            "*": [
+                "src/*"
+            ]
         }
     },
     "scripts": {
