--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -17,8 +17,12 @@
     },
     "typesVersions": {
         "*": {
-            "amplify": ["src/amplify/index.ts"],
-            "*": ["src/*"]
+            "amplify": [
+                "src/amplify/index.ts"
+            ],
+            "*": [
+                "src/*"
+            ]
         }
     },
     "scripts": {
@@ -32,8 +36,8 @@
         "@packages/types": "workspace:*"
     },
     "peerDependencies": {
-        "aws-amplify": ">=6",
         "@aws-amplify/ui-react": ">=6",
+        "aws-amplify": ">=6",
         "next": ">=15",
         "react": ">=18",
         "react-dom": ">=18"
