--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,6 +3,11 @@
     "version": "0.0.0",
     "type": "module",
     "private": true,
+    "scripts": {
+        "lint": "eslint .",
+        "format": "prettier --write .",
+        "test": "vitest run --passWithNoTests"
+    },
     "exports": {
         "./base": "./base.js",
         "./next-js": "./next.js",
