--- a/tools/package.json
+++ b/tools/package.json
@@ -8,7 +8,7 @@
     ],
     "packageManager": "yarn@4.9.4",
     "engines": {
-        "node": "22.19.x"
+        "node": ">=22.19.0 <23"
     },
     "scripts": {
         "generate:sitemap": "node scripts/generate-sitemap.js",
