fix(ts): harden error handling across web and tools

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "lint:pretty": "yarn -s lint | % { $_ -replace [regex]::Escape(\"$PWD\\\"), \".\\\" -replace '/', '\\\\' }",
         "lint:packages": "eslint \"packages/**/*.{ts,tsx,js,jsx}\"",
         "lint:web": "eslint apps/web",
-        "test": "yarn vitest run --passWithNoTests && yarn test:workspaces",
+        "test": "yarn vitest run --passWithNoTests && yarn workspaces foreach -Av --exclude root run test || true",
         "test:workspaces": "yarn workspaces foreach -Av --exclude root run test || true",
         "test:web": "yarn workspace web run test",
         "format": "yarn workspaces foreach -Av --exclude root run format || true",
@@ -31,8 +31,8 @@
         "keep:list": "node ./tools/scripts/keep-list.cjs",
         "keep": "yarn lint && node ./tools/scripts/keep-list.cjs && node ./tools/scripts/keep-functions.cjs",
         "keep:fn": "node ./tools/scripts/keep-functions.cjs",
-        "css:prune": "tsx tools/scripts/css-prune.ts",
-        "css:prune:apply": "tsx tools/scripts/css-prune.ts --apply",
+        "css:prune": "yarn tools:css-prune",
+        "css:prune:apply": "tsx tools/css-prune.ts --apply",
         "tools:css-prune": "tsx tools/css-prune.ts",
         "tools:sitemap": "node tools/generate-sitemap.js"
     },
