--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,11 @@ jobs:
         with:
           node-version: '22.19.0'
           cache: 'yarn'
+      - name: Enable Corepack (Yarn 4)
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.4 --activate
+          yarn -v
       - name: Yarn version
         run: yarn -v
       - name: Install
