--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "eslint .",
-        "tsc": "tsc -p tsconfig.json --noEmit",
+        "tsc": "yarn node ../../tools/scripts/run-tsc.cjs -p tsconfig.json --noEmit",
         "format": "prettier --write .",
         "test": "vitest run --passWithNoTests",
         "analyze": "NEXT_ANALYZE=1 next build"
@@ -79,6 +79,7 @@
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
+        "typescript": "5.4.4",
         "vitest": "^2.1.4",
         "webpack": "^5.0.0",
         "whatwg-fetch": "^3.6.20"
