--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,6 +8,9 @@
         "format": "prettier --write .",
         "test": "vitest run --passWithNoTests"
     },
+    "devDependencies": {
+        "eslint-plugin-import": "^2.32.0"
+    },
     "exports": {
         "./base": "./base.js",
         "./next-js": "./next.js",
@@ -18,6 +21,7 @@
         "@next/eslint-plugin-next": ">=15.0.0 <16",
         "eslint": ">=9.34.0 <10",
         "eslint-config-prettier": ">=10 <11",
+        "eslint-plugin-import": ">=2.29.0 <3",
         "eslint-plugin-react": ">=7 <8",
         "eslint-plugin-react-hooks": ">=5 <6",
         "globals": ">=16 <17",
