--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Bootstrap Corepack
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.4 --activate
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
